# ssd_simulator

./: .gitignore  CMakeLists.txt  README.md  auto_sim.sh  ftl.cpp  ftl.hpp  main.cpp
1220_page_overflow_bug/: result_128mb_randrw_cpu0-1_th-1_type0.txt  result_128mb_randrw_cpu0-1_th-1_type0_op14.txt  result_128mb_randrw_cpu0-1_th-1_type0_op28.txt  result_128mb_randrw_cpu0-1_th-1_type0_op7.txt  result_128mb_randrw_cpu0-1_th-1_type0_win12.txt  result_128mb_randrw_cpu0-1_th-1_type1.txt  result_128mb_randrw_cpu0-1_th-1_type2_win4.txt  result_128mb_randrw_cpu0-1_th-1_type2_win8.txt
128mb_sim_result/: result_128mb_randrw_cpu0-1_th-1_type0-op14.txt  result_128mb_randrw_cpu0-1_th-1_type0-op7.txt  result_128mb_randrw_cpu0-1_th-1_type1-op28.txt  result_128mb_randrw_cpu0-1_th-1_type2_win20.txt  result_128mb_randrw_cpu0-1_th-1_type2_win24.txt  result_128mb_randrw_cpu0-1_th-1_type2_win28.txt
256mb_sim_result/: result_256mb_randrw_cpu0-1_th-1_type0-op14.txt  result_256mb_randrw_cpu0-1_th-1_type1-op14.txt  result_256mb_randrw_cpu0-1_th-1_type1-op28.txt  result_256mb_randrw_cpu0-1_th-1_type1-op7.txt  result_256mb_randrw_cpu0-1_th-1_type2_win44.txt  result_256mb_randrw_cpu0-1_th-1_type2_win48.txt  result_256mb_randrw_cpu0-1_th-1_type2_win60.txt  result_256mb_randrw_cpu0-1_th-1_type2_win64.txt
32mb_sim_result/: log_32mb_1_th-1_type2_win7.txt  log_32mb_1_th10_type0.txt
supplementary/: sim_result.vsz
supplementary/128mb_sim_result/: result_128mb_randrw_cpu0-1_th-1_type0-op28.txt  result_128mb_randrw_cpu0-1_th-1_type1-op14.txt  result_128mb_randrw_cpu0-1_th-1_type1-op7.txt  (+1 more)
(+22 files in other folders)
